[package]
name = "kate-recovery"
version = "0.9.1"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Internals
avail-core = { path = "../../core", default-features = false }
dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2", default-features = false, optional = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-arithmetic = { version = "*", default-features = false }
sp-std = { version = "*", default-features = false }

# 3rd-parties
derive_more = "0.99.17"
static_assertions = "1.1.0"
thiserror-no-std = "2.0.2"

dusk-bytes = { version = "0.1.6", default-features = false, optional = true }
once_cell = { version = "1.9.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"], optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
hex = "0.4"
test-case = "1.2.3"

[features]
default = ["std"]
std = [
	"once_cell",
	"serde",
	"sp-arithmetic/std",
	"sp-std/std",
	"avail-core/std",
	"rand/std",
	"rand_chacha/std",
	"dusk-bytes",
	"dusk-plonk/std",
]
