[package]
name = "kate-recovery"
version = "0.9.1"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Internals
avail-core = { path = "../../core", default-features = false }
dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2", default-features = false, optional = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# 3rd-parties
derive_more = { version = "0.99.17" }
static_assertions = { version = "1.1.0" }
thiserror-no-std = { version = "2.0.2" }

dusk-bytes = { version = "0.1.6", default-features = false, optional = true }
once_cell = { version = "1.9.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"], optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
serde = { version = "1.0.188", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
test-case = "1.2.3"

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"dusk-bytes",
	"dusk-plonk/std",
	"once_cell",
	"rand/std",
	"rand_chacha/std",
	"serde",
	"sp-arithmetic/std",
	"sp-std/std",
]

serde = [ "dep:serde" ]
