[package]
name = "nomad-base"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomad-core = { path = "../core", default-features = false }
nomad-signature = { path = "../signature", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-core = { version = "*", default-features = false }

sp-runtime = { version = "7", default-features = false, optional = true }

# Eth
ethers-signers = { version = "1", optional = true }

# Others
once_cell = { version = "1.8.0", optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde",
	"ethers-signers",
	"once_cell",
	"codec/std",
	"nomad-signature/std",
	"scale-info/std",
	"nomad-core/std",
	"sp-core/std",
	"sp-runtime/std",
]
