[package]
name = "nomad-base"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomad-core = { path = "../core", default-features = false }
nomad-signature = { path = "../signature", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# Substrate runtime
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }

# Eth
ethers-signers = { version = "1", optional = true }

# Others
once_cell = { version = "1.8.0", optional = true }
serde = { version = "1.0.188", default-features = false, features = ["derive"], optional = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethers-signers",
	"nomad-core/std",
	"nomad-signature/std",
	"once_cell",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
]
serde = [ "dep:serde" ]
