[package]
name = "nomad-core"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nomad-signature = { path = "../signature", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12", default-features = false, features = ["scale-info", "codec"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }

# Eth
ethers-core = { version = "1", optional = true }
ethers-signers = { version = "1", optional = true }

# Others
serde = { version = "1.0.188", default-features = false, features = ["derive"], optional = true }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

[dev-dependencies]
async-trait = { version = "0.1.42" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethers-core",
	"ethers-signers",
	"nomad-signature/std",
	"primitive-types/serde",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
]
serde = [ "dep:serde" ]
runtime-benchmarks = []
