[package]
name = "nomad-signature"
version = "0.1.3"
authors = ["Luke Tchang <luke@nomad.xyz>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ltchang2019/no-std-eth-signature"
description = """
`ethers-rs` signature implemented as no_std.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Substrate & Parity
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# Eth
ethers-core = { version = "1", default-features = false, optional = true }

# Others
elliptic-curve = { version = "0.12.3", default-features = false, features = ["sec1"] }
generic-array = { version = "0.14", default-features = false }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.11.5", default-features = false, features = ["keccak256", "ecdsa"] }
serde = { version = "1.0.188", default-features = false, optional = true, features = ["derive"] }
thiserror-no-std = { version = "2.0.2" }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

[dev-dependencies]
byte-slice-cast = { version = "1.2.1" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethers-core",
	"frame-support/std",
	"hex/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
]
serde = [ "dep:serde" ]
