[package]
name = "da-control"
version = "1.0.1"
authors = [""]
edition = "2021"
license = "Apache-2.0"
homepage = ""
repository = ""
description = "Data Avail Control Module"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }
frame-system = { path = "../../pallets/system", default-features = false }
pallet-transaction-payment = { path = "../../pallets/transaction-payment", default-features = false }

log = { version = "0.4.20", default-features = false }
static_assertions = "1.1.0"

# Substrate
serde = { version = "1.0.195", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-utility = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false, features = ["std"] }
test-case = "1.2.3"

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"kate/std",
	"log/std",
	"pallet-utility/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"avail-core/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
