[package]
name = "da-control"
version = "1.0.1"
license = "Apache-2.0"
description = "Data Avail Control Module"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }
frame-system = { path = "../../pallets/system", default-features = false }
pallet-transaction-payment = { path = "../../pallets/transaction-payment", default-features = false }

log.workspace = true
static_assertions.workspace = true

# Substrate
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive", ] }
scale-info = { version = "2.5.0", default-features = false, features = [ "derive", ] }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-utility = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false, features = ["std"] }
test-case.workspace = true

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"kate/std",
	"log/std",
	"pallet-utility/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"avail-core/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
