[package]
name = "da-control"
version = "1.0.1"
license = "Apache-2.0"
description = "Data Avail Control Module"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
avail-base = { workspace = true, default-features = false }
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-vector = { workspace = true, default-features = false }

# Others
log.workspace = true
thiserror-no-std.workspace = true
derive_more.workspace = true

# Substrate
serde = { workspace = true, optional = true, features = ["derive"] }
codec = { workspace = true, default-features = false, features = [ "derive", ] }
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-runtime-interface = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false, features = ["std"] }
pallet-timestamp = { workspace = true, default-features = false, features = ["std"] }
test-case.workspace = true

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"kate/std",
	"log/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-vector/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"avail-core/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
