[package]
name = "frame-executive"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
description = "FRAME executives engine"
readme = "README.md"
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
log.workspace = true
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }

[dev-dependencies]
array-bytes.workspace = true
pallet-balances = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }

[features]
default = [ "std" ]
with-tracing = [ "sp-tracing/with-tracing" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-tracing/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]
